[drogal] fix crawler